# neutron-transport-monte-carlo

./: .gitignore  Cargo.toml  LICENSE  README.md
config/geometries/: geometry_examples.toml  plate_reactor.toml  reactor_vessel.toml  working_reactor.toml
config/simulation/: default.toml  reference.toml
data/b-10/: b-10_aggregated_absorption.csv  b-10_aggregated_scattering.csv
data/be-9/: Be-9_aggregated_scattering.csv  be-9_aggregated_absorption.csv
data/fe-54/: Fe-54_aggregated_absorption.csv  Fe-54_aggregated_scattering.csv
data/h-1/: H-1_aggregated_absorption.csv  H-1_aggregated_scattering.csv
data/o-16/: O-16_aggregated_scattering.csv  o-16_aggregated_absorption.csv
data/u-235/: u-235_aggregated_absorption.csv  u-235_aggregated_scattering.csv  u-235_fission.csv  u-235_nu_bar.csv  u-235_watt_parameters.csv
data/u-238/: u-238_aggregated_scattering.csv
scripts/endf_processing/: endf_handling.py
scripts/geometry_creation/: create_geometry.py
scripts/post_processing/: analyze_temperatures.py  csv_to_vtk.py  plot_convergence.py  utils.py
src/: diagnostics.rs  geometry.rs  heat_diffusion.rs  lib.rs  main.rs  materials.rs  neutrons.rs  simulation.rs
src/diagnostics/: data_post_processing.rs  diagnostics_output.rs  diagnostics_tracking.rs  geometry_diagnostics.rs  halt_causes.rs  plotting.rs
src/geometry/: components.rs  parts.rs  presets.rs
src/heat_diffusion/: heat_diffusion.rs  heat_diffusion_rework.rs
src/materials/: material_data.rs  material_properties.rs
src/utils/: data_loading.rs  (+6 more)
tests/: component_tests.rs  criticality_validation.rs
(+27 files in other folders)
